@@ -1746,7 +1746,7 @@ ClientEnv* _Create_SfcbLocal_Env(char *id)
     env->hdl=NULL;
     env->ft=&localFT;
     // enable logging when called from sfcc
-    startLogging("sfcb",LOG_ERR);
+    startLogging(LOG_ERR);
     
     return env;
  }
