@@ -27,7 +27,9 @@
 #define M_SHOW  1
 #define M_QUIET 0
 
-void startLogging(const char *name, int level);
+#define LOG_MSG_MAX 4096
+
+void startLogging(int level);
 void closeLogging();
 void mlogf(int priority, int errout, const char* fmt, ...);
 
