@@ -22,6 +22,7 @@ Bugs fixed:
 - 2969129 Missing dlclose() in httpAdapter.c
 - 2974807 Can't have > 2 providers registered for the same classname
 - 2961560 Disallow InvokeMethod calls to internal provider methods
+- 2982924 Use a logging process to write to syslog"
 
 
 Changes in 1.3.7
